--- a/package.json
+++ b/package.json
@@ -15,10 +15,8 @@
   "dependencies": {
     "@mdx-deck/layouts": "^2.5.0",
     "@mdx-deck/themes": "^3.0.8",
-    "code-surfer": "2.0.0-alpha.10",
-    "file-loader": "^4.1.0",
     "mdx-deck": "^3.0.8",
-    "mdx-deck-code-surfer": "^0.5.5",
+    "prism-react-renderer": "^0.1.7",
     "raw-loader": "^3.1.0",
     "rebass": "^3.2.0",
     "styled-components": "^4.3.2"
